# poetry-sqlalchemy-intro

./: .gitignore  .pre-commit-config.yaml  example.py  pyproject.toml  setup.cfg
poetry_sqlalchemy_intro/: __init__.py
poetry_sqlalchemy_intro/common/: base.py
poetry_sqlalchemy_intro/domain/: __init__.py  card.py  chassis.py  port.py  router.py  vlan.py
tests/: test_poetry_sqlalchemy_intro.py
