[tool.poetry]
name = "poetry-sqlalchemy-intro"
version = "0.1.0"
description = ""
authors = ["Damian Parniewicz <damian.parniewicz@codilime.com>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.36"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
